send to new remote branch

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,7 @@
 <h3>offre de covoiturage</h3>
 <div>
   <table class="table table-dark">
+
   <thead>
     <tr>
       <th scope="col">ville</th>
@@ -38,14 +39,15 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">netanya</th>
-      <td>tahana mercazit</td>
-      <td>tahana ashdod</td>
+      <th scope="row">depart</th>
+      <td>{{lastone.depart}}</td>
+      <td>{{lastone.arrive}}</td>
       <td>13 h</td>
       <td>1</td>
-      <td>055 55 555 555</td>
-      <td>35 nis</td>
+      <td>{{lastone.num_phone}}</td>
+      <td>{{lastone.date}}</td>
     </tr>
+
     <tr>
       <th scope="row">Netanya</th>
       <td>jabotinski 22</td>
