--- a/templates/home_for_annonimous.html
+++ b/templates/home_for_annonimous.html
@@ -20,7 +20,10 @@
 
 {% block content %}
 
- <h2> demande de covoiturage du  </h2> <p id="demo">here</p>
+ <h2> offre de covoiturage du  </h2> <p id="demo">here</p>
+
+{% for last in lastone %}
+
 
 
 
