--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -9,7 +9,9 @@
 
 
 
-<H1> {{object.author}} : {{object.depart}} ,{{object.arrive}} </H1>
+<H1> {{object.author}}</H1>
+
+<h3> {{object.depart}} ,{{object.arrive}}</h3>
 {% if user == post.author %}
 <button> modification </a></button>
 
