--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -8,7 +8,7 @@
     <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{% url 'user_id' user.pk %}">{{ object.author }}</a>
+        <a class="mr-2" href="{% url 'postdetail' object.pk %}">{{ object.author }}</a>
         <small class="text-muted">{{ object.date_depart|date:"F d, Y" }}</small>
       </div>
     </div>
