--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-<h1> {{object.username}}</h1>
+<h1> {{object.author}}</h1>
 
 <ul>
 
-    <li> {{object.car}}</li>
-    <li> {{choosen}}</li>
-    <li> {{object.email}}</li>
-    <li> {{object.avatar}}</li>
-    <li> {{object.age}}</li>
+
+
+
+    <li> {{object.num_phone}}</li>
+
 
 </ul>
 
