--- a/static/style.css
+++ b/static/style.css
@@ -4,13 +4,13 @@
 
 
 body {
-  background: #fafafa;
-  color: #333333;
+  background: ligthblue ;
+  color: #323232;
   margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+  color: red ;
 }
 
 ul {
