--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -17,7 +17,9 @@
         {{ form.as_p }}
     </table>
     {% csrf_token %}
-    <button type="submit"> send </button>
+
+
+    <button type="submit"><a href="{%  url 'user_post' username.pk %}"></a> send </button>
 </form>
 
 
